--- a/style.css
+++ b/style.css
@@ -1,4 +1,3 @@
-
 :root {
   --main-color: #171717;
   --secondary-color: #ffffff;
@@ -284,7 +283,7 @@ footer {
 }
 
 #content {
-  height: 2000px; /* Altura de exemplo para rolar a página */
+  height: 2000px; 
 }
 html{
   scroll-behavior: smooth;
@@ -297,4 +296,121 @@ html{
 
 
 
+@media (max-width: 768px) {
+  .nav {
+    width: 100%; 
+    margin: 0;
+    gap: 20px; 
+  }
+  .hero {
+    width: 100%; 
+    height: auto; 
+    flex-direction: column; 
+  }
+  .image {
+    width: 200px; 
+    height: 200px; 
+    margin-right: 0; 
+    margin-top: 20px;
+  }
+  body {
+    width: 100%; 
+  }
+  .intro {
+    width: 100%;
+    text-align: center;
+    justify-content: center;
+    margin-top: 50px;
+    margin-left: 0; 
+  }
+  .about,
+  .services {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin-top: 50px;
+  }
+  .about .title,
+  .services .title,
+  .forms .title {
+    font-size: 35px;
+    font-weight: 800;
+    padding-bottom: 20px;
+  }
+  .about .para {
+    width: 80%; 
+    text-align: center;
+    padding-bottom: 50px;
+  }
 
+  .about .socails,
+  .services .wcards,
+  .services .skillcard {
+    width: 80%; 
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+  .about .socails .card {
+    display: inherit;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 5px;
+    width: 100%;
+    height: 150px;
+  }
+
+  .about .circ {
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    background-color: var(--gray-color);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  .about .circ > div {
+    width: 10px;
+    height: 10px;
+    border-radius: 50%;
+    background-color: var(--tetiary-color);
+  }
+  .wcards,
+  .skillcard {
+    justify-content: center !important;
+    gap: 50px;
+    padding-bottom: 50px;
+    padding-top: 50px;
+  }
+  .wcards .card,
+  .skillcard > .card {
+    width: 100%; 
+    background-color: var(--gray-color);
+    font-size: 30px;
+    padding: 40px;
+    padding-right: 150px;
+  }
+  .wcards .card > .icon {
+    color: var(--tetiary-color);
+    font-size: 50px;
+  }
+  .wcards .card:nth-child() {
+    border-bottom: 3px solid var(--tetiary-color);
+  }
+  .wcards .card:hover {
+    border-bottom: 3px solid var(--tetiary-color);
+  }
+
+  .skillcard > .card > .per {
+    font-size: 50px;
+    font-weight: 900;
+    color: var(--secondgray-color);
+  }
+
+  .skillcard > .card > .name {
+    text-transform: uppercase;
+    color: var(--tetiary-color);
+  }
+}
