--- a/style.css
+++ b/style.css
@@ -226,17 +226,13 @@ form {
 }
 form > input {
   border: none;
-  background: transparent;
-  width: 48%;
-  height: 40px;
+  width: 256.5px;
   border-bottom: 1px solid #c4c4c4;
   outline: none;
   font-size: 16px;
 }
 form > textarea {
   border: none;
-  background: transparent;
-
   border: 1px solid #c4c4c4;
   outline: none;
   font-size: 16px;
