fix nav 3.0 style.css

--- a/style.css
+++ b/style.css
@@ -232,6 +232,7 @@ form > input {
 }
 form > textarea {
   border: none;
+  width: 256.5px;
   border: 1px solid #c4c4c4;
   outline: none;
   font-size: 16px;
