--- a/style.css
+++ b/style.css
@@ -225,14 +225,13 @@ form {
 }
 form > input {
   border: none;
-  width: 256.5px;
+  width: 100%;
   border-bottom: 1px solid #c4c4c4;
   outline: none;
   font-size: 16px;
 }
 form > textarea {
   border: none;
-  width: 256.5px;
   border: 1px solid #c4c4c4;
   outline: none;
   font-size: 16px;
