--- a/style.css
+++ b/style.css
@@ -214,13 +214,13 @@ main {
   margin-top: 50px;
 }
 form {
-  width: 50%;
+  width: 100%;
   align-self: center;
   margin-top: 50px;
 
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-between;
+  justify-content: center;
   gap: 20px;
 }
 form > input {
@@ -262,7 +262,7 @@ footer {
 }
 #back-to-top-btn {
   display: none;
-  position: fixed;
+  position:fixed;
   bottom: 20px;
   right: 20px;
   background-color: rgb(18, 136, 18);
@@ -273,9 +273,8 @@ footer {
   transition: opacity 0.4s ease-in-out;
 }
 
-#back-to-top-btn:hover {
-  background-color: rgb(18, 136, 18);
-}
+
+
 
 #content {
   height: 2000px; 
@@ -333,6 +332,9 @@ html{
     font-size: 35px;
     font-weight: 800;
     padding-bottom: 20px;
+  }
+  .services {
+    width: 100%
   }
   .about .para {
     width: 80%; 
@@ -409,7 +411,130 @@ html{
     text-transform: uppercase;
     color: var(--tetiary-color);
   }
-  .services {
-    width: 100%;
+}
+.contactForm {
+  width: 40%;
+  padding: 40px;
+  background: #1e1d1d;
+  box-shadow: rgb(18, 136, 18) 0px 20px 30px -10px;
+}
+
+.contactForm h2 {
+  font-size: 30px;
+  color: #ffffff;
+  font-weight: 500;
+}
+.contactForm .inputBox{
+  position: relative;
+  width: 100%;
+  margin-top: 10px;
+}
+.contactForm .inputBox input, textarea, button {
+  width: 100%;
+  padding: 5px 0;
+  font-size: 16px;
+  margin: 10px 0;
+  border: none;
+  border-bottom: 2px solid #171717;
+  outline: none;
+  resize: none;
+}
+
+
+.contactForm .inputBox button {
+  position: relative; /* Tornar o botão relativo para posicionar elementos filhos absolutos */
+  display: flex; /* Usar flexbox para centralizar a imagem */
+  align-items: center; /* Centralizar verticalmente */
+  justify-content: center; /* Centralizar horizontalmente */
+  border-radius: 30px;
+}
+
+.contactForm .inputBox span {
+  position: absolute;
+  left: 0;
+  padding: 5px 0;
+  font-size: 16px;
+  margin: 10px 0;
+  pointer-events: none;
+  transition: 0.5s;
+  color: #ffffff;
+}
+.contactForm .inputBox input:focus ~ span,
+.contactForm .inputBox input:valid ~ span,
+.contactForm .inputBox button:focus ~ span,
+.contactForm .inputBox button:valid ~ span,
+.contactForm .inputBox textarea:focus ~ span,
+.contactForm .inputBox textarea:valid ~ span  {
+  color: rgb(18, 136, 18);
+  font-size: 12px;
+  transform: translateY(-20px);
+}
+
+.contactForm .inputBox button[type="submit"]{
+  width: 100px;
+  background-color: #171717;
+  color: #fff;
+  border: none;
+  cursor: pointer;
+  height: 40px;
+  padding: 10px;
+  font-size: 18px;
+  transition: 0.3s ease;
+}
+
+.contactForm .inputBox button[type="submit"]:hover {
+  background-color: #1e1d1d;
+}
+.contatos {
+  min-height: 80vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.contactForm .inputBox input {
+  background-color: #171717;
+}
+textarea {
+background-color: #171717;
+}
+@media (max-width: 991px) {
+  .contacts {
+      
+      padding: 50px;
+  }
+  .container {
+      
+      flex-direction: column;
+  }
+  .container .contactInfo {
+      margin-bottom: 40px;
+  }
+  .container .contactInfo, .contactForm {
+      width: 100%;
+  } 
+  .box {
+      width: 100%;
+      display: block;
+  }
+  .box p{
+      font-size: 14px;
+  }
+
+}
+.loading {
+  position: absolute;
+
+  width: 30px;
+  height: 30px; /* Adicionei altura para garantir uma exibição adequada */
+  animation: spin 1s infinite linear;
+}
+
+@keyframes spin {
+  from {
+      transform: rotate(0deg);
+  }
+
+  to {
+      transform: rotate(360deg);
   }
 }
